--- a/query.html
+++ b/query.html
@@ -1,1 +1,36 @@
-<script src="query.bundle.js"></script>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <form class="select">
+            <h1> where u goin?</h1>
+            <label for="outgoing">outgoing</label><br>
+            <input type="text" name="outgoing" required><br>
+            <button>submit</button><br>
+        </form><br>
+
+        <table id="flights">
+            <tr>
+            <th>Outgoing</th>
+            <th>Incoming</th>
+            <th>Aircraft</th>
+            <th>Duration</th>
+            </tr>
+
+        </table>
+
+
+
+
+
+
+
+        <script src="./query.bundle.js"></script>
+        
+
+    </body>
+</html>
+
+
+
